<resources>
    <!-- Commons -->
    <string name="app_name">Polyglot</string>
    <string name="allow">Allow</string>
    <string name="back">Back</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="unrecognized">Unrecognized</string>

    <!-- Content descriptions -->
    <string name="camera_icon">Camera icon</string>
    <string name="file_icon">File icon</string>
    <string name="no_text_icon">no_text_icon</string>
    <string name="languages_dropdown">Languages dropdown</string>
    <string name="result_image">Result image</string>

    <!-- Menus -->
    <string name="main_menu_take_photo">Take Photo</string>
    <string name="main_menu_choose_file">Choose File</string>
    <string name="results_menu_new_translation">New translation</string>

    <!-- Messages  -->
    <string name="camera_permission_message">Allow Polyglot to use the on-device camera</string>
    <string name="storage_permission_message">Allow Polyglot to read the on-device storage</string>
    <string name="no_results_message">Could not recognize any text</string>
    <string name="analyzing_image">Analyzing image</string>

    <string name="result_state_initial">Initializing translation</string>
    <string name="result_state_fetching_model">Fetching translation model</string>
    <string name="result_state_translating">Translating</string>
</resources>