<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="192dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoResultsActivity">

    <ImageView
        android:id="@+id/no_results_icon"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:contentDescription="@string/no_text_icon"
        app:srcCompat="@drawable/ic_outline_speaker_notes_off_24" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/no_results_message"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_results_message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/no_results_back_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>