<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="192dp"
    tools:context=".CameraActivity">

    <ImageView
        android:id="@+id/camera_permission_icon"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:contentDescription="@string/camera_icon"
        app:srcCompat="@drawable/ic_outline_photo_camera_24" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/camera_permission_message"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_permission_message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/camera_permission_allow_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGrantPermissionButtonClick"
        android:text="@string/allow" />

</LinearLayout>